--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Writer</title>
     <link rel="stylesheet" href="/style/simple.css" />
+    <link rel="stylesheet" href="/style/writing.css" />
     <script type="module" src="main.js"></script>
   </head>
   <body>
