--- a/www/index.html
+++ b/www/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
     <title>Writer</title>
     <link rel="stylesheet" href="/style/simple.css" />
     <link rel="stylesheet" href="/style/writing.css" />
     <script type="module" src="main.js"></script>
   </head>
-  <body>
-    <writer-app />
-  </body>
+  <body></body>
 </html>
