Fix relative locations

--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,9 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     />
     <title>Writer</title>
-    <link rel="stylesheet" href="/style/simple.css" />
-    <link rel="stylesheet" href="/style/writing.css" />
-    <script type="module" src="main.js"></script>
+    <link rel="stylesheet" href="./style/simple.css" />
+    <link rel="stylesheet" href="./style/writing.css" />
+    <script type="module" src="./main.js"></script>
   </head>
   <body></body>
 </html>
